--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,7 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background-color: #000;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
