--- a/src/app/components/PageLink/PageLink.module.css
+++ b/src/app/components/PageLink/PageLink.module.css
@@ -1,7 +1,21 @@
 .container {
   background-color: #141515;
   margin: 0.3rem;
-  padding: 0.7rem 0.3rem;
+  padding: 0.7rem 0.8rem;
   border-radius: 0.3rem;
+  font-weight: 500;
+}
+
+.containerWithoutChange {
   text-align: center;
+  display: block;
+}
+
+.containerWithChange {
+  display: flex;
+  justify-content: space-between;
+}
+
+.change {
+  color: #6ff586;
 }
