Improves empty list view

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,3 +7,10 @@
 .spinnerContainer {
   margin-top: 2rem;
 }
+
+.emptyListContainer {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
