--- a/src/app/(routes)/explore-stocks/page.module.css
+++ b/src/app/(routes)/explore-stocks/page.module.css
@@ -1,13 +1,20 @@
 .container {
   color: #fff;
-  padding: 1rem 0.5rem;
-  text-align: center;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  min-height: 100vh;
 }
 
-.spinnerContainer {
-  margin-top: 2rem;
+.btnContainer {
+  width: 100%;
 }
 
-.title {
-  margin-bottom: 2rem;
+@media screen and (min-width: 300px) {
+  .container {
+    padding: 1.5rem;
+  }
 }
