--- a/src/app/components/StockList/StockList.module.css
+++ b/src/app/components/StockList/StockList.module.css
@@ -1,5 +1,9 @@
 .stockListContainer {
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .stockLinkContainer {
