--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,16 +1,43 @@
 .container {
   color: #fff;
-  padding: 1rem 0.5rem;
+  padding: 1rem;
   text-align: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.spinnerContainer {
-  margin-top: 2rem;
+.title {
+  margin-bottom: 1rem;
 }
 
 .emptyListContainer {
   display: flex;
-  gap: 0.5rem;
+  flex-direction: column;
+  gap: 5rem;
   justify-content: center;
+  align-items: center;
   margin-bottom: 2rem;
+}
+
+.listContainer {
+  min-height: 80vh;
+}
+
+#listIcon {
+  color: #141515;
+  height: 14rem;
+}
+
+.contentContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 300px) {
+  .container {
+    padding: 1.5rem;
+  }
 }
