--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,11 +1,12 @@
 .container {
   color: #fff;
   padding: 1rem;
-  text-align: center;
-  height: 100vh;
+  font-weight: 500;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-height: 100vh;
+  text-align: center;
 }
 
 .title {
