Improves responsive design

--- a/src/app/components/StockInfo/StockInfo.module.css
+++ b/src/app/components/StockInfo/StockInfo.module.css
@@ -11,3 +11,9 @@
 .stockChangeInfo {
   font-size: 2rem;
 }
+
+@media screen and (min-width: 768px) {
+  .stockInfoContainer {
+    gap: 3.5rem;
+  }
+}
