--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100vh;
+  height: 100vh;
   text-align: center;
 }
 
@@ -16,14 +16,10 @@
 .emptyListContainer {
   display: flex;
   flex-direction: column;
-  gap: 5rem;
+  gap: 1rem;
   justify-content: center;
   align-items: center;
   margin-bottom: 2rem;
-}
-
-.listContainer {
-  min-height: 80vh;
 }
 
 #listIcon {
@@ -31,14 +27,26 @@
   height: 14rem;
 }
 
-.contentContainer {
+.listContainer {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 80vh;
 }
 
 @media screen and (min-width: 300px) {
   .container {
     padding: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    padding: 2rem 5rem 5rem 5rem;
+  }
+
+  #listIcon {
+    color: #141515;
+    height: 20rem;
   }
 }
