--- a/src/app/(routes)/explore-stocks/page.module.css
+++ b/src/app/(routes)/explore-stocks/page.module.css
@@ -6,7 +6,6 @@
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  min-height: 100vh;
 }
 
 .btnContainer {
@@ -16,6 +15,7 @@
 @media screen and (min-width: 300px) {
   .container {
     padding: 1.5rem;
+    height: 85vh;
   }
 }
 
