--- a/src/app/(routes)/stock-detail/[name]/page.module.css
+++ b/src/app/(routes)/stock-detail/[name]/page.module.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100vh;
 }
 
 .title {
@@ -16,6 +15,7 @@
 @media screen and (min-width: 300px) {
   .container {
     padding: 1.5rem;
+    height: 85vh;
   }
 }
 
