--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
   text-align: center;
 }
 
@@ -19,12 +18,11 @@
   gap: 1rem;
   justify-content: center;
   align-items: center;
-  margin-bottom: 2rem;
 }
 
 #listIcon {
   color: #141515;
-  height: 14rem;
+  height: 10rem;
 }
 
 .listContainer {
@@ -37,6 +35,14 @@
 @media screen and (min-width: 300px) {
   .container {
     padding: 1.5rem;
+    height: 85vh;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  #listIcon {
+    color: #141515;
+    height: 14rem;
   }
 }
 
