--- a/src/app/(routes)/explore-stocks/page.module.css
+++ b/src/app/(routes)/explore-stocks/page.module.css
@@ -8,19 +8,14 @@
   gap: 1rem;
 }
 
-.btnContainer {
-  width: 100%;
-}
-
 @media screen and (min-width: 300px) {
   .container {
     padding: 1.5rem;
-    height: 85vh;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    padding: 2rem 5rem 5rem 5rem;
+    padding: 2rem 5rem;
   }
 }
