--- a/src/app/(routes)/stock-detail/[name]/page.module.css
+++ b/src/app/(routes)/stock-detail/[name]/page.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-align: center;
 }
 
 .title {
@@ -15,12 +16,17 @@
 @media screen and (min-width: 300px) {
   .container {
     padding: 1.5rem;
-    height: 85vh;
+  }
+}
+
+@media screen and (min-width: 375px) {
+  .container {
+    text-align: left;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    padding: 2rem 5rem 5rem 5rem;
+    padding: 2rem 5rem;
   }
 }
