--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,22 +2,31 @@
   color: #fff;
   padding: 1rem;
   font-weight: 500;
+  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  text-align: center;
 }
 
 .title {
   margin-bottom: 1rem;
 }
 
-.emptyListContainer {
+.emptyListContainer,
+.listContainer {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   justify-content: center;
   align-items: center;
+}
+
+.emptyListContainer {
+  gap: 1rem;
+}
+
+.listContainer {
+  height: 80vh;
+  justify-content: space-between;
 }
 
 #listIcon {
@@ -25,34 +34,24 @@
   height: 10rem;
 }
 
-.listContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 80vh;
-}
-
-@media screen and (min-width: 300px) {
+@media screen and (min-width: 375px) {
   .container {
     padding: 1.5rem;
-    height: 85vh;
   }
 }
 
 @media screen and (min-width: 576px) {
   #listIcon {
-    color: #141515;
     height: 14rem;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    padding: 2rem 5rem 5rem 5rem;
+    padding: 2rem 5rem;
   }
 
   #listIcon {
-    color: #141515;
     height: 20rem;
   }
 }
