--- a/src/app/components/FollowStockItem/FollowStockItem.module.css
+++ b/src/app/components/FollowStockItem/FollowStockItem.module.css
@@ -1,7 +1,7 @@
 .stockItemContainer {
   background-color: #141515;
   margin: 0.3rem;
-  padding: 0.7rem 0.8rem;
+  padding: 1rem;
   border-radius: 0.3rem;
   font-weight: 500;
   display: flex;
@@ -19,7 +19,6 @@
   align-items: center;
   border: 1.5px solid #2f3131;
   border-radius: 0.2rem;
-  font-size: 1rem;
   font-weight: 500;
 }
 
