--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,12 +58,20 @@ a {
   margin: 0 auto;
 }
 
+.title {
+  font-size: 2.5rem;
+}
+
 @media screen and (min-width: 375px) {
   .linkBtnContainer {
     width: 100%;
   }
   html {
     font-size: 16px;
+  }
+
+  .title {
+    font-size: 2rem;
   }
 }
 
