--- a/src/app/(routes)/explore-stocks/page.module.css
+++ b/src/app/(routes)/explore-stocks/page.module.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
+  min-height: 90vh;
 }
 
 @media screen and (min-width: 300px) {
