--- a/src/app/(routes)/explore-stocks/page.module.css
+++ b/src/app/(routes)/explore-stocks/page.module.css
@@ -6,9 +6,12 @@
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  min-height: 90vh;
 }
 
+.stockListContainer {
+  min-height: 90vh;
+  width: 100%;
+}
 @media screen and (min-width: 300px) {
   .container {
     padding: 1.5rem;
