--- a/src/app/(routes)/explore-stocks/page.module.css
+++ b/src/app/(routes)/explore-stocks/page.module.css
@@ -6,15 +6,23 @@
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
+  max-width: 90vw;
+  margin: 0 auto;
 }
 
 .stockListContainer {
-  min-height: 90vh;
+  min-height: 95vh;
   width: 100%;
 }
 @media screen and (min-width: 300px) {
   .container {
     padding: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 375px) {
+  .container {
+    max-width: 100%;
   }
 }
 
