--- a/src/app/(routes)/stock-detail/[name]/page.module.css
+++ b/src/app/(routes)/stock-detail/[name]/page.module.css
@@ -7,6 +7,8 @@
   justify-content: space-between;
   text-align: center;
   min-height: 90vh;
+  max-width: 90vw;
+  margin: 0 auto;
 }
 
 .stockContainer {
@@ -22,6 +24,7 @@
 @media screen and (min-width: 375px) {
   .container {
     text-align: left;
+    max-width: 100%;
   }
 }
 
