--- a/src/app/(routes)/explore-stocks/page.module.css
+++ b/src/app/(routes)/explore-stocks/page.module.css
@@ -6,28 +6,35 @@
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  max-width: 90vw;
   margin: 0 auto;
-}
-
-.stockListContainer {
-  min-height: 95vh;
+  min-height: 100vh;
   width: 100%;
 }
-@media screen and (min-width: 300px) {
-  .container {
-    padding: 1.5rem;
-  }
+
+.errorContainer {
+  margin-top: 2rem;
 }
 
-@media screen and (min-width: 375px) {
-  .container {
-    max-width: 100%;
-  }
+.stockListContainer,
+.errorContainer {
+  width: 100%;
+  min-height: 60vh;
 }
 
 @media screen and (min-width: 768px) {
   .container {
     padding: 2rem 5rem;
+  }
+  .stockListContainer,
+  .errorContainer {
+    min-height: 72vh;
+  }
+}
+
+@media screen and (min-aspect-ratio: 1/1) and (max-aspect-ratio: 4/3) {
+  /* For smartwatch screens */
+  .container {
+    width: 80%;
+    margin: 0 auto;
   }
 }
