--- a/src/app/(routes)/stock-detail/[name]/page.module.css
+++ b/src/app/(routes)/stock-detail/[name]/page.module.css
@@ -5,31 +5,34 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  text-align: center;
-  min-height: 90vh;
-  max-width: 90vw;
+  text-align: left;
+  min-height: 100vh;
   margin: 0 auto;
+  width: 100%;
 }
 
 .stockContainer {
   margin-top: 1rem;
 }
 
-@media screen and (min-width: 300px) {
+@media screen and (min-width: 768px) {
   .container {
-    padding: 1.5rem;
+    padding: 2rem 5rem;
   }
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (min-aspect-ratio: 1/1) and (max-aspect-ratio: 4/3) {
+  /* For smartwatch screens */
   .container {
-    text-align: left;
-    max-width: 100%;
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    padding: 2rem 5rem;
+    gap: 1rem;
+    justify-content: normal;
   }
 }
