--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
 }
 
 html {
-  font-size: 4vw;
+  font-size: 16px;
 }
 
 html,
@@ -54,25 +54,13 @@ a {
 }
 
 .linkBtnContainer {
-  width: 60%;
+  width: 90%;
   margin: 0 auto;
+  margin-bottom: 1rem;
 }
 
 .title {
   font-size: 2.5rem;
-}
-
-@media screen and (min-width: 375px) {
-  .linkBtnContainer {
-    width: 100%;
-  }
-  html {
-    font-size: 16px;
-  }
-
-  .title {
-    font-size: 2rem;
-  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -85,5 +73,19 @@ a {
   .app-container {
     max-width: 752px;
     margin: 0 auto;
+  }
+}
+
+@media screen and (min-aspect-ratio: 1/1) and (max-aspect-ratio: 4/3) {
+  .container {
+    font-size: 8.5vw;
+  }
+
+  .linkBtnContainer {
+    width: 50%;
+  }
+
+  .title {
+    font-size: 2rem;
   }
 }
