--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,8 +6,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  max-width: 90vw;
+  min-height: 85vh;
   margin: 0 auto;
+  gap: 1rem;
+  width: 100%;
 }
 
 .emptyListContainer,
@@ -17,6 +19,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
+  min-height: 50vh;
 }
 
 .emptyListContainer {
@@ -24,7 +27,6 @@
 }
 
 .listContainer {
-  height: 80vh;
   justify-content: space-between;
 }
 
@@ -33,11 +35,8 @@
   height: 10rem;
 }
 
-@media screen and (min-width: 375px) {
-  .container {
-    padding: 1.5rem;
-    max-width: 100%;
-  }
+.paginationContainer {
+  margin-bottom: 1.5rem;
 }
 
 @media screen and (min-width: 576px) {
@@ -53,5 +52,13 @@
 
   #listIcon {
     height: 20rem;
+  }
+}
+
+@media screen and (min-aspect-ratio: 1/1) and (max-aspect-ratio: 4/3) {
+  /* For smartwatch screens */
+  .container {
+    width: 80%;
+    margin: 0 auto;
   }
 }
