--- a/src/app/components/Pagination/Pagination.module.css
+++ b/src/app/components/Pagination/Pagination.module.css
@@ -6,6 +6,7 @@
   padding: 10px;
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  flex-wrap: wrap;
 }
 
 .pageBtn {
@@ -46,4 +47,9 @@
 
 .pageBtn svg {
   color: #fff;
+}
+
+.ellipsis {
+  padding: 0 5px;
+  color: #ccc;
 }
